Colaboratory を使用して作成しました

--- a/chartmatha01probability1.ipynb
+++ b/chartmatha01probability1.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmatha01probability1.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMnW/j4WvaODKiYTYF//ryz",
+      "authorship_tag": "ABX9TyPb9huo8FkRHNIs6mEmqAfT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -908,15 +908,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "_aE5hVOrr2z1"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [
         "# p.229 場合の数\n",
@@ -940,7 +931,14 @@
       "cell_type": "code",
       "source": [
         "# p.234 順列\n",
-        "# 異なる"
+        "# 異なる n 個のものの中から異なる r 個を取り出して 1 列に並べる順列の総数は\n",
+        "# _nP_r=n(n-1)(n-2)\\cdots\\cdots(n-r+1)=\\frac{n!}{(n-r)!} <= r 個の数の積\n",
+        "# 特に\n",
+        "# _nP_n=n(n-1)(n-2)\\cdots\\cdots3\\cdot2\\cdot1\n",
+        "# ただし\n",
+        "# 0!=1\n",
+        "# _nP_0=1\n",
+        "# と定める"
       ],
       "metadata": {
         "id": "4ErqG4nm8oDT"
@@ -969,7 +967,7 @@
           "height": 120
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -984,12 +982,102 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_aE5hVOrr2z1"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# p.239 円順列・重複順列\n",
+        "# 円順列\n",
+        "# (n - 1)!\n",
+        "# じゅず数珠順列\n",
+        "# \\frac{(n - 1)!}{2}\n",
+        "# 重複順列\n",
+        "# n^r"
+      ],
+      "metadata": {
+        "id": "ax_CbCQuVyza"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%latex\n",
+        "\\displaystyle\n",
+        "(n - 1)! \\\\\n",
+        "\\frac{(n - 1)!}{2} \\\\\n",
+        "n^r"
+      ],
+      "metadata": {
+        "id": "5xosFvuzB0kH",
+        "outputId": "ab300162-feb7-4630-ab4e-0c71f3fcfa76",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 97
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\n(n - 1)! \\\\\n\\frac{(n - 1)!}{2} \\\\\nn^r"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# p.242 組合せ\n"
+      ],
+      "metadata": {
+        "id": "-Mb3c_ATB0ao"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%latex\n"
+      ],
+      "metadata": {
+        "id": "WNKletJ6C6wM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "ax_CbCQuVyza"
+        "id": "kslY9eMJC6sO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "06X1SMkSC6no"
       },
       "execution_count": null,
       "outputs": []
