Colaboratory を使用して作成しました

--- a/chartmatha01probability1.ipynb
+++ b/chartmatha01probability1.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmatha01probability1.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP9WIPByv99pE7s34UUTKIR",
+      "authorship_tag": "ABX9TyP/sgy/WOM9Eh8n8jWHLI+c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1041,7 +1041,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# p.242 組合せ\n"
+        "# p.242 組合せ\n",
+        "# 異なる n 個のものの中から異なる r 個を取る組合せの総数は\n",
+        "# _nC_r=\\frac{_nP_r}{r!}=\\frac{n(n-1)(n-2)\\cdots \\cdots (n - r + 1)}{r(r-1)\\cdots\\cdots3\\cdot2\\cdot1} = \\frac{n!}{r!(n-r)!}\n",
+        "# 特に _nC_n=1 ただし _nC_0=1 と定める。 \\Longleftarrow _nP_1=1 \n",
+        "# _nC_r の性質 C_r =_nC_{n-r} (0 \\leqq r \\leqq n)\n",
+        "# _nC_r = _{n-1}C_r + _{n-1}C_{r-1} (1\\leqq r \\leqq n-1, n \\geqq2)"
       ],
       "metadata": {
         "id": "-Mb3c_ATB0ao"
@@ -1054,17 +1059,23 @@
       "source": [
         "%%latex\n",
         "\\displaystyle\n",
-        "_nC_r=\\frac{_nP_r}{r!}=\\frac{n(n-1)(n-2)\\cdots \\cdots}{}"
+        "_nC_r=\\frac{_nP_r}{r!}=\\frac{n(n-1)(n-2)\\cdots \\cdots (n - r + 1)}{r(r-1)\\cdots\\cdots3\\cdot2\\cdot1} = \\frac{n!}{r!(n-r)!} \\\\\\\n",
+        "_nC_n=1 \\\\\\\n",
+        "_nC_0=1 \\Longleftarrow _nP_1=1 \\\\\\\n",
+        "_nC_r =_nC_{n-r} \\\\\\\n",
+        "(0 \\leqq r \\leqq n) \\\\\\\n",
+        "_nC_r = _{n-1}C_r + _{n-1}C_{r-1} \\\\\\\n",
+        "(1\\leqq r \\leqq n-1, n \\geqq2)"
       ],
       "metadata": {
         "id": "WNKletJ6C6wM",
-        "outputId": "41b01894-05a9-4906-9d0f-6d2487789974",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 53
-        }
+          "height": 189
+        },
+        "outputId": "3849d47e-17f6-42ef-ef4f-cc2b7728d080"
       },
-      "execution_count": 3,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1072,7 +1083,53 @@
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ],
-            "text/latex": "\\displaystyle\n_nC_r=\\frac{_nP_r}{r!}=\\frac{n(n-1)(n-2)\\cdots \\cdots}{}"
+            "text/latex": "\\displaystyle\n_nC_r=\\frac{_nP_r}{r!}=\\frac{n(n-1)(n-2)\\cdots \\cdots (n - r + 1)}{r(r-1)\\cdots\\cdots3\\cdot2\\cdot1} = \\frac{n!}{r!(n-r)!} \\\\\\\n_nC_n=1 \\\\\\\n_nC_0=1 \\Longleftarrow _nP_1=1 \\\\\\\n_nC_r =_nC_{n-r} \\\\\\\n(0 \\leqq r \\leqq n) \\\\\\\n_nC_r = _{n-1}C_r + _{n-1}C_{r-1} \\\\\\\n(1\\leqq r \\leqq n-1, n \\geqq2)"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 同じものを含む順列\n",
+        "# n 個の物の内、p 個は同じ物、q 個は別の同じ物、r 個はまた別の同じ物、\\cdots \\cdots である時、\n",
+        "# それら n 個の物全部を使って作られる順列の総数は\n",
+        "# _nC_p\\times_{n-p}C_q\\times_{n-p-q}C_r\\times\\cdots\\cdots すなわち\n",
+        "# \\frac{n!}{p!q!r!\\cdots} (p+q+r+\\cdots\\cdots=n)"
+      ],
+      "metadata": {
+        "id": "kslY9eMJC6sO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%latex\n",
+        "\\displaystyle\n",
+        "_nC_p\\times_{n-p}C_q\\times_{n-p-q}C_r\\times\\cdots\\cdots \\\\\\\n",
+        "\\frac{n!}{p!q!r!\\cdots} \\\\\\\n",
+        "(p+q+r+\\cdots\\cdots=n)"
+      ],
+      "metadata": {
+        "id": "06X1SMkSC6no",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 99
+        },
+        "outputId": "7427ea7b-dfa4-4c67-adec-3f6ef1d156d8"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\n_nC_p\\times_{n-p}C_q\\times_{n-p-q}C_r\\times\\cdots\\cdots \\\\\\\n\\frac{n!}{p!q!r!\\cdots} \\\\\\\n(p+q+r+\\cdots\\cdots=n)"
           },
           "metadata": {}
         }
@@ -1084,29 +1141,40 @@
         ""
       ],
       "metadata": {
-        "id": "kslY9eMJC6sO"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "06X1SMkSC6no"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
         "id": "u4VLodcFVzNH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "gMwAcfdSW5Yd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "R34I42-6W5TD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "gV91onRqW5MY"
       },
       "execution_count": null,
       "outputs": []
