Colaboratory を使用して作成しました

--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -85,7 +85,7 @@
         "\\displaystyle\n",
         "\\int f(x)dx"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -212,29 +212,32 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
+      "source": [
+        "# マークダウンと %%latex の違い (参考)\n",
+        "# コードセルに %%latex と書くとその行以降 mathjax のルールが適用される\n",
+        "# $ マークはそのまま出力する\n",
+        "# % 記号はコメント記号\n",
+        "# バックスラッシュ \\ 自体は \\backslash と書く\n",
+        "# 波記号 チルダ tilde ~ は \\tilde{}、キャレット、ハット記号、サーカムフレックス、circumflex ^ は \\hat{} になる\n",
+        "# 地の文、テキストも数式として解釈されるので、英文字はフォントが変わる。普通の文字にしたい場合は \\text{} で括る\n",
+        "# 改行はマークダウンではスペース 2 個だが、%%latex では バックスラッシュ \\ を2個 \\\\\n",
+        "# その他マークダウン上の便利な機能。箇条書きの自動ナンバリングなどは使えない"
+      ],
       "metadata": {
         "id": "RLjJ7URGdV1Z"
       },
-      "source": [
-        "# マークダウンと %%latex の違い (参考)\n",
-        "1. コードセルに %%latex と書くとその行以降 mathjax のルールが適用される。\n",
-        "1. %%latex以降にバックスラッシュ \\ でエスケープされていない \\$ マークがあると latex で解釈せずに入力のまま出力する。 \n",
-        "1. % 記号はコメント記号なので文法上は許されるが、% 記号以降が出力されないのでバックスラッシュ \\ でエスケープする必要がある。\n",
-        "1. バックスラッシュ \\ 自体は \\backslash と書く。 波記号 チルダ tilde ~ は \\tilde{}、キャレット、ハット記号、サーカムフレックス、circumflex ^ は \\hat{} になる。\n",
-        "1. 地の文、テキストも数式として解釈されるので、英文字はフォントが変わる。普通の文字にしたい場合は \\text{} で括る。\n",
-        "1. 改行はマークダウンではスペース 2 個だが、%%latex では バックスラッシュ \\ を2個 \\\\\\\\ になる。\n",
-        "1. その他マークダウン上の便利な機能。箇条書きの自動ナンバリングなどは使えない。\n"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "Osz4ublTk27V",
-        "outputId": "6054ccf0-7fc1-4338-9eea-e26c3c2cf33c",
+        "outputId": "6f2293f5-cd24-4e8c-8c8a-2e938f8a7817",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 228
+          "height": 208
         }
       },
       "source": [
@@ -244,15 +247,14 @@
         "this\\ is\\ a\\ pen. \\\\ % スペースはエスケープする \n",
         "\\text{this is a pen} \\\\ % \\text{} を使うとイタリックでなくなる\n",
         "% これは latex のコメント記号。これ以降が表示されない \\\\\n",
-        "\\% はこうやって表示。普通にエスケープ \\\\\n",
-        "\\backslash \\\\\n",
+        "\\% はこうやって表示。普通に \\backslash でエスケープする \\\\\n",
         "\\tilde{x}\\\\\n",
         "this is  \\tilde a pen \\\\ % \\tilde は 後続の 1 文字に作用する\n",
-        "\\hat{x} \\\\\n",
-        "x^3 \\\\\\\n",
-        "^2 x ^3 \\\\"
+        "\\hat{x} \\\\ % \\hat は 後続の 1 文字に作用する\n",
+        "x^3 \\\\\\ % hat 自体は上付きの意味\n",
+        "_1^2 x ^3_4 \\\\ % 下付きはアンダーバー"
       ],
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -260,7 +262,7 @@
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ],
-            "text/latex": "this is a pen. \\\\ % スペースは無視される \nthis\\ is\\ a\\ pen. \\\\ % スペースはエスケープする \n\\text{this is a pen} \\\\ % \\text{} を使うとイタリックでなくなる\n% これは latex のコメント記号。これ以降が表示されない \\\\\n\\% はこうやって表示。普通にエスケープ \\\\\n\\backslash \\\\\n\\tilde{x}\\\\\nthis is  \\tilde a pen \\\\ % \\tilde は 後続の 1 文字に作用する\n\\hat{x} \\\\\nx^3 \\\\\\\n^2 x ^3 \\\\"
+            "text/latex": "this is a pen. \\\\ % スペースは無視される \nthis\\ is\\ a\\ pen. \\\\ % スペースはエスケープする \n\\text{this is a pen} \\\\ % \\text{} を使うとイタリックでなくなる\n% これは latex のコメント記号。これ以降が表示されない \\\\\n\\% はこうやって表示。普通に \\backslash でエスケープする \\\\\n\\tilde{x}\\\\\nthis is  \\tilde a pen \\\\ % \\tilde は 後続の 1 文字に作用する\n\\hat{x} \\\\ % \\hat は 後続の 1 文字に作用する\nx^3 \\\\\\ % hat 自体は上付きの意味\n_1^2 x ^3_4 \\\\ % 下付きはアンダーバー"
           },
           "metadata": {}
         }
@@ -281,7 +283,7 @@
         "E = mc^2  \\\\[0.8em] % 行間を広げる\n",
         "c = 299{,}792{,}458 \\, \\mathrm{m/s} "
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -308,39 +310,27 @@
       "metadata": {
         "id": "VQ5cdQKxB0lO"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "XaZ9k2NuebYv",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 74
-        },
-        "outputId": "638d2ff0-b2ae-4e1a-99d2-c2f469159d56"
-      },
       "source": [
-        "%%latex\n",
-        "E =mc^2 \\\\[0.8em]\n",
-        "c = 299{,}792{,}458 \\, \\mathrm{m/s}"
+        "# マークダウンでドル`$`マーク ドルサインをエスケープする\n",
+        "# マークダウンでは mathjax の begin, end の記号なので、バックスラッシュ `\\` でエスケープする必要がある\n",
+        "# この本は\\$35.40\n",
+        "# ドルサイン自体を HTML文字参照で書く、という方法もある\n",
+        "# `&#36; `\n",
+        "# `&#x24;`\n",
+        "# `&dollar;`\n",
+        "# HTML文字参照は latex の中では使えない\n",
+        "# マークダウンで同一セル内でペアになっていないと表示される"
       ],
+      "metadata": {
+        "id": "JJRGMDwVF90w"
+      },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/latex": "E =mc^2 \\\\[0.8em]\nc = 299{,}792{,}458 \\, \\mathrm{m/s}",
-            "text/plain": [
-              "<IPython.core.display.Latex object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -350,53 +340,6 @@
       "metadata": {
         "id": "PAeh3hNTnxYr"
       }
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "JJRGMDwVF90w"
-      },
-      "source": [
-        "# ドル`$`マーク ドルサインをエスケープするには\n",
-        "\n",
-        "この本は\\$35.40。これはマークダウン。\n",
-        "\n",
-        "この本は $\\$35.40$ 。これは latex。\n",
-        "\n",
-        "ドルサインは latex (mathjax) 対応のマークダウンでは mathjax の begin, end の記号なので、エスケープする必要がある。\n",
-        "\n",
-        "colab 環境ではバックスラッシュ `\\` でエスケープできる。\n",
-        "\n",
-        "ドルサイン自体を HTML文字参照で書く、という方法もある。\n",
-        "\n",
-        "`&#36; `\n",
-        "`&#x24;`\n",
-        "`&dollar;`\n",
-        "\n",
-        "HTML文字参照は latex の中では使えない。\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "5Bj1HdA_dkGx"
-      },
-      "source": [
-        "同一セル内でペアになっていないと表示される。\n",
-        "\n",
-        "$\n",
-        "\n",
-        "$$"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ji3YyhsGKjpV"
-      },
-      "source": [
-        "# 水平方向の空白"
-      ]
     },
     {
       "cell_type": "code",
@@ -411,7 +354,7 @@
       "source": [
         "# 水平方向の空白の実験\n",
         "# \\+セミコロン、スペース、チルダが標準的な 1 文字スペースのようである\n",
-        "# とりあえずセミコロンがわかりやすいので \\; とする\n",
+        "# とりあえずセミコロンがわかりやすいので \\; とするが\n",
         "%%latex\n",
         "a\\;b\\;c\\;d\\;e\\;f\\;g\\; セミコロン\\\\\n",
         "a\\ b\\ c\\ d\\ e\\ f\\ g\\  スペース\\\\\n",
@@ -437,34 +380,35 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "L872XDCqfsyM"
-      },
+      "cell_type": "code",
       "source": [
-        "# 改行と空行\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
+        "# %%latex 中で空行を入れる方法\n",
+        "%%latex\n",
+        "x = 3 \\\\\n",
+        "{}\\\\ \n",
+        "y \\\\[0.5em] % 行間を指定しする方法\n",
+        "z"
+      ],
       "metadata": {
-        "id": "D07ckSl95vvl"
+        "id": "k2WcoDQ6TnZM",
+        "outputId": "50254a16-b599-4def-a8b4-9bae706c6be9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 112
+        }
       },
-      "source": [
-        "マークダウン中の latex の中での改行は無視される。\n",
-        "\n",
-        "\n",
-        "結合されて、1 つの文になる。\n",
-        "\n",
-        "改行は `\\` を行末に2個入れる。  \n",
-        "\n",
-        "行間をあける (空白行を入れる) のはけっこうむずかしい。\n",
-        "\n",
-        "\\{\\}+\\\\\\\\  \n",
-        "`{}\\\\`\n",
-        "\n",
-        "とか。\n",
-        "\n"
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "x = 3 \\\\\n{}\\\\ \ny \\\\[0.5em] % 行間を指定しする方法\nz"
+          },
+          "metadata": {}
+        }
       ]
     },
     {
@@ -473,7 +417,8 @@
         "id": "A3Z0alVOPf75"
       },
       "source": [
-        "#インテグラル 積分\n",
+        "---\n",
+        "インテグラル 積分\n",
         "$$\n",
         "\\frac{\\pi}{2} =\n",
         "\\left( \\int_{0}^{\\infty} \\frac{\\sin x}{\\sqrt{x}} dx \\right)^2 =\n",
@@ -490,13 +435,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 67
         },
-        "outputId": "c809418a-f158-4738-d931-1cc7aa950f82"
+        "outputId": "1368cd2b-0fb4-41f8-df68-2582d29102ab"
       },
       "source": [
         "# インテグラル 積分記号\n",
         "# latex では \\int , sympy では Integral\n",
         "%%latex\n",
-        "\\displaystyle\n",
+        "\\displaystyle % インラインスタイルでフォントが小さくなってしまう\n",
         "\\frac{\\pi}{2}\n",
         "=\n",
         "\\left( \\int_{0}^{\\infty} \\frac{\\sin x}{\\sqrt{x}} dx \\right)^2\n",
@@ -505,30 +450,18 @@
         "=\n",
         "\\prod_{k=1}^{\\infty} \\frac{4k^2}{4k^2 - 1}"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "\\displaystyle\n\\frac{\\pi}{2}\n=\n\\left( \\int_{0}^{\\infty} \\frac{\\sin x}{\\sqrt{x}} dx \\right)^2\n=\n\\sum_{k=0}^{\\infty} \\frac{(2k)!}{2^{2k}(k!)^2} \\frac{1}{2k+1}\n=\n\\prod_{k=1}^{\\infty} \\frac{4k^2}{4k^2 - 1}",
             "text/plain": [
               "<IPython.core.display.Latex object>"
-            ]
+            ],
+            "text/latex": "\\displaystyle % インラインスタイルでフォントが小さくなってしまう\n\\frac{\\pi}{2}\n=\n\\left( \\int_{0}^{\\infty} \\frac{\\sin x}{\\sqrt{x}} dx \\right)^2\n=\n\\sum_{k=0}^{\\infty} \\frac{(2k)!}{2^{2k}(k!)^2} \\frac{1}{2k+1}\n=\n\\prod_{k=1}^{\\infty} \\frac{4k^2}{4k^2 - 1}"
           },
-          "metadata": {
-            "tags": []
-          }
+          "metadata": {}
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ufdfBaWyw9Te"
-      },
-      "source": [
-        "`\\displaystyle`としないと、インラインスタイルでフォントが小さくなってしまう。\n",
-        "\n"
       ]
     },
     {
@@ -544,6 +477,34 @@
       "cell_type": "markdown",
       "metadata": {
         "id": "ohnAEa3ppMIq"
+      },
+      "source": [
+        "マークダウンで英文字は   \n",
+        "abcdefABC  \n",
+        "となるが、ドルサインで囲って latex にすると、数学用のフォントになる。  \n",
+        "$abcdefABC$  \n",
+        "この latex のなかで text とすると数学フォントではなくなる。  \n",
+        "$\\text{This is a text}$  \n",
+        "\n",
+        "* latex -> $abcdefABC$ $\\quad$ 通常の数式書体\n",
+        "* \\mathrm -> $\\mathrm{abcdefABC}$   $\\quad$ sin, cos など数式\n",
+        "*\\boldsymbol -> $\\boldsymbol{abcdefABC}$ $\\quad$ ベクトルに使う\n",
+        "* \\mathbf -> $\\mathbf{abcdefABC}$ $\\quad$ $\\mathbf{NZRC}$\n",
+        "* \\mathbb -> $\\mathbb{abcdefABC}$ $\\quad$ $\\mathbb{NZRC}$\n",
+        "* \\mathcal -> $\\mathcal{abcdefABC}$   $\\quad$ \n",
+        "* \\mathfrak -> $\\mathfrak{abcdefABC}$   $\\quad$ \n",
+        "\n",
+        "数学のテキストでのアルファベットの使い分けは通常はイタリックで、座標とかはセリフ付きのローマン体の大文字が使われている。 ベクトルを小文字で表すときに上矢印をつけずにボールド体を使うことがある。\n",
+        "\n",
+        "手書きで部分白抜きを真似た mathbb というのもあって、これで書かれたテキストもある。\n",
+        "\n",
+        "&nbsp;"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qQfLGhVVV1kk"
       },
       "source": [
         "マークダウンで英文字は   \n",
