Colaboratory を使用して作成しました

--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -255,7 +255,7 @@
         "x^3 \\\\\\ % hat 自体は上付きの意味\n",
         "_1^2 x ^3_4 \\\\ % 下付きはアンダーバー"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -389,7 +389,7 @@
         "id": "k2WcoDQ6TnZM",
         "outputId": "50254a16-b599-4def-a8b4-9bae706c6be9"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -442,7 +442,7 @@
         "=\n",
         "\\prod_{k=1}^{\\infty} \\frac{4k^2}{4k^2 - 1}"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -479,7 +479,7 @@
         },
         "outputId": "05a8e6a2-094b-4b31-c004-afca02c1b8c2"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -527,7 +527,7 @@
       "metadata": {
         "id": "l0WOCX6ZbsFA"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -686,7 +686,7 @@
         "\\displaystyle\n",
         "\\Bigg( \\bigg[ \\Big\\{ \\big\\| \\langle x \\rangle \\big\\| \\Big\\} \\bigg] \\Bigg)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -720,7 +720,7 @@
         },
         "outputId": "db8dd040-b294-434e-dece-dcca6b0eea16"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -887,15 +887,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "0O1SWSw4SMjp"
-      },
-      "source": [
-        "# 複素関数\n"
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [
         "# 複素関数\n",
@@ -935,7 +926,7 @@
         "    \\displaystyle \\frac{\\partial u}{\\partial y} &=& \\displaystyle - \\frac{\\partial v}{\\partial x}\n",
         "\\end {array}"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1033,7 +1024,7 @@
         "    + \\frac{f''(a)}{2!} (b - a)^2 + \\cdots \n",
         "    + \\frac{f^{(n - 1)}(a)}{(n - 1)!} (b - a)^{(n - 1)} + R_n(c)"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1106,7 +1097,7 @@
         "    \\end {bmatrix}\n",
         "\\end {array} \\\\"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1121,107 +1112,51 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "# いまここ"
+        "# 二項関係\n",
+        "# 定義 集合 X 上の二項関係 \\rho について、次の性質を考える。\n",
+        "# 1. すべての x \\in X について、x \\rho x が成り立つ。(反射律 reflexive law)\n",
+        "# 2. x, y \\in X について、x \\rho y ならば y \\rho x が成り立つ。(対称律 transitive law)\n",
+        "# 3. x, y, z \\in X について、x \\rho y かつ y \\rho z ならば x \\rho z が成り立つ。(推移律 symmetric law)\n",
+        "# 4. x, y \\in X について、x \\rho y かつ y \\rho x ならば x = y が成り立つ。(反対称律 antisymmetric law)\n",
+        "# 性質 \\it{1, 2, 3} を満たす二項関係を同値関係と呼び、性質 \\it{1, 3, 4} を満たす二項関係を順序関係と呼ぶ。"
       ],
-      "metadata": {
-        "id": "oIRgtf-1rN28"
-      }
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {
         "id": "wdOsVm25xi6O"
       },
-      "source": [
-        "# 二項関係\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "kyKAHNQ0qTLo"
-      },
-      "source": [
-        "\n",
-        "\n",
-        "定義 1 集合 $X$ 上の二項関係 $\\rho$ について、次の性質を考える。\n",
-        "\n",
-        "1. すべての $x \\in X$ について、$x \\;\\rho\\; x$ が成り立つ。(反射律)\n",
-        "\n",
-        "1. $x, y \\in X$ について、$x \\;\\rho\\; y$ ならば $y \\;\\rho\\; x$ が成り立つ。(対称律)\n",
-        "\n",
-        "1. $x, y, z \\in X$ について、$x \\;\\rho\\; y$ かつ $y \\;\\rho\\; z$ ならば $x \\;\\rho\\; z$ が成り立つ。(推移律)\n",
-        "\n",
-        "1. $x, y \\in X$ について、$x \\;\\rho\\; y$ かつ $y \\;\\rho\\; x$ ならば $x = y$ が成り立つ。(反対称律)\n",
-        "\n",
-        "性質 $\\it{1, 2, 3}$ を満たす二項関係を同値関係と呼び、性質 $\\it{1, 3, 4}$ を満たす二項関係を順序関係と呼ぶ。\n",
-        "\n",
-        "* reflexive law 反射律\n",
-        "* transitive law 推移律\n",
-        "* symmetric law 対称律\n",
-        "* antisymmetric law 反対称律"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 146
+          "height": 104
         },
         "id": "vPJ7sqxYSIxz",
-        "outputId": "b865a903-e038-41fb-c5c1-a81064553138"
+        "outputId": "3b292d79-b15d-4417-9584-2bd89f715f48"
       },
       "source": [
         "%%latex\n",
-        "定義 1 集合 X 上の二項関係 \\;\\rho\\; について、次の性質を考える。\\\\\n",
-        "\n",
-        "1. すべての x \\in X について、x \\;\\rho\\; x が成り立つ。(反射律) \\\\\n",
-        "2. x, y \\in X について、x \\;\\rho\\; y ならば y \\;\\rho\\; x が成り立つ。(対称律) \\\\\n",
-        "3. x, y, z \\in X について、x \\;\\rho\\; y かつ y \\;\\rho\\; z ならば x \\;\\rho\\; z が成り立つ。(推移律) \\\\\n",
-        "4. x, y \\in X について、x \\;\\rho\\; y かつ y \\;\\rho\\; x ならば x = y が成り立つ。(反対称律) \\\\\n",
-        "性質 \\it{1, 2, 3} を満たす二項関係を同値関係と呼び、性質 \\it{1, 3, 4} を満たす二項関係を順序関係と呼ぶ。 \\\\"
+        "\\rho \\\\\n",
+        "x \\in X \\\\\n",
+        "x \\rho x \\\\\n",
+        " \\it{1, 2, 3} \\\\"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "定義 1 集合 X 上の二項関係 \\;\\rho\\; について、次の性質を考える。\\\\\n\n1. すべての x \\in X について、x \\;\\rho\\; x が成り立つ。(反射律) \\\\\n2. x, y \\in X について、x \\;\\rho\\; y ならば y \\;\\rho\\; x が成り立つ。(対称律) \\\\\n3. x, y, z \\in X について、x \\;\\rho\\; y かつ y \\;\\rho\\; z ならば x \\;\\rho\\; z が成り立つ。(推移律) \\\\\n4. x, y \\in X について、x \\;\\rho\\; y かつ y \\;\\rho\\; x ならば x = y が成り立つ。(反対称律) \\\\\n性質 \\it{1, 2, 3} を満たす二項関係を同値関係と呼び、性質 \\it{1, 3, 4} を満たす二項関係を順序関係と呼ぶ。 \\\\",
             "text/plain": [
               "<IPython.core.display.Latex object>"
-            ]
+            ],
+            "text/latex": "\\rho \\\\\nx \\in X \\\\\nx \\rho x \\\\\n \\it{1, 2, 3} \\\\"
           },
-          "metadata": {
-            "tags": []
-          }
+          "metadata": {}
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "AhnMk_wTnkZU"
-      },
-      "source": [
-        "# 集合の内包表記 set comprehension"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "xfp5HeQy57fH"
-      },
-      "source": [
-        "参考 集合で習う集合の内包表記は数式で次の様に書く。\n",
-        "\n",
-        "$\n",
-        "S= \\{2x \\mid x \\in  \\mathbb{N}, \\ x \\leq 10 \\}\n",
-        "$\n",
-        "\n",
-        "プログラミングでは list comprehension と言うと思うが。\n"
       ]
     },
     {
@@ -1235,10 +1170,10 @@
         "outputId": "ab706d6d-8b04-4c67-a653-e47d36ccc43a"
       },
       "source": [
-        "# 参考 集合で習う集合の内包表記は数式で次の様に書く。\n",
+        "# 集合の内包表記 set comprehension, list comprehension\n",
+        "# 参考 集合で習う集合の内包表記は数式で次の様に書く\n",
         "%%latex\n",
-        "\n",
-        "S= \\{2x \\mid x \\in  \\mathbb{N}, \\ x \\leq 10 \\}\n"
+        "S= \\{2x \\mid x \\in  \\mathbb{N}, \\ x \\leq 10 \\}"
       ],
       "execution_count": null,
       "outputs": [
@@ -1257,39 +1192,89 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "4shZRzUt7YUh"
-      },
+      "cell_type": "code",
       "source": [
-        "# 練習問題"
-      ]
-    },
-    {
-      "cell_type": "markdown",
+        "# 2 次方程式\n",
+        "# ax^{2}+bx+c=0  \n",
+        "# の解は\n",
+        "# x = \\frac{-b\\pm\\sqrt{b^{2}-4ac}}{2a} \\tag{1}\n",
+        "# である"
+      ],
       "metadata": {
         "id": "OjewVaDU7a0u"
       },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
-        "---\n",
-        "2 次方程式\n",
-        "$$ ax^{2}+bx+c=0 $$ \n",
-        "の解は\n",
-        "$$ x = \\frac{-b\\pm\\sqrt{b^{2}-4ac}}{2a} \\tag{1}$$\n",
-        "である。"
+        "# 2 次方程式の解\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "ax^{2}+bx+c=0 \\\\\n",
+        "x = \\frac{-b\\pm\\sqrt{b^{2}-4ac}}{2a}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 77
+        },
+        "id": "oN2FcRIYY7iI",
+        "outputId": "6673a67b-a783-44b5-839a-0ca0c351f1a5"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\nax^{2}+bx+c=0 \\\\\nx = \\frac{-b\\pm\\sqrt{b^{2}-4ac}}{2a}"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 総和記号 シグマ Sigma sum\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "\\sum_{k=1}^{n} a_{k} = a_{1} + a_{2} + \\dots + a_{n}"
+      ],
+      "metadata": {
+        "id": "x9LkU-cj76aw",
+        "outputId": "bd0333b8-e508-467d-9c13-71b3486a23b3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ],
+            "text/latex": "\\displaystyle\n\\sum_{k=1}^{n} a_{k} = a_{1} + a_{2} + \\dots + a_{n}"
+          },
+          "metadata": {}
+        }
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "x9LkU-cj76aw"
-      },
       "source": [
-        "---\n",
-        "総和記号 シグマ はこんな感じ。\n",
-        "\n",
-        "$$\\sum_{k=1}^{n} a_{k} = a_{1} + a_{2} + \\dots + a_{n}$$"
-      ]
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "oIRgtf-1rN28"
+      }
     },
     {
       "cell_type": "markdown",
